<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_password"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        android:layout_below="@id/login_email"
        android:layout_centerHorizontal="true"
         />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_email"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:layout_below="@id/login_title"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="10dp"
        android:ellipsize="none"
        android:paddingVertical="15dp"
        android:paddingHorizontal="30dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:layout_below="@id/login_password"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login_to_your_account"
        android:textColor="#303736"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:paddingStart="30dp"
        android:layout_below="@id/login_toolbar"
        />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_login_btn"
        android:layout_centerHorizontal="true"
        android:text="Forgot your password?"
        android:layout_marginTop="15dp"
        android:textSize="16sp"/>

</RelativeLayout>